# rag-system

./: .replit  CHANGELOG.md  README.md  config.py  llm_adapter.py  main.py  openai_chat_completion.py  pasted_text_1726385189064.txt  pdf_processor.py  pyproject.toml  vector_store.py
rag_system/: config.py  main.py
rag_system/app/: routes.py
rag_system/app/models/: vector_store.py
rag_system/app/services/: llm_adapter.py  pdf_processor.py
rag_system/app/templates/: index.html
static/: main.js  style.css
static/css/: style.css
static/js/: main.js
templates/: index.html
